--- a/index.html
+++ b/index.html
@@ -818,57 +818,57 @@ Sag mir einfach, wie ich dir helfen darf, und wir legen direkt los!"*
             <tbody class="bg-white divide-y divide-slate-200">
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">ChatGPT</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://chatgpt.com](https://chatgpt.com)" target="_blank" rel="noopener noreferrer">chatgpt.com</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://chatgpt.com" target="_blank" rel="noopener noreferrer">chatgpt.com</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">OpenAI-Modell</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Notebook LM</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://notebooklm.google.com](https://notebooklm.google.com)" target="_blank" rel="noopener noreferrer">notebooklm.google.com</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://notebooklm.google.com" target="_blank" rel="noopener noreferrer">notebooklm.google.com</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Auf interne Dokumente beschränkte KI</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Gemini</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://gemini.google.com](https://gemini.google.com)" target="_blank" rel="noopener noreferrer">gemini.google.com</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://gemini.google.com" target="_blank" rel="noopener noreferrer">gemini.google.com</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Google-Modell</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Perplexity</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://www.perplexity.ai](https://www.perplexity.ai)" target="_blank" rel="noopener noreferrer">perplexity.ai</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://www.perplexity.ai" target="_blank" rel="noopener noreferrer">perplexity.ai</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Speziell für Recherche</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Claude</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://www.anthropic.com/claude](https://www.anthropic.com/claude)" target="_blank" rel="noopener noreferrer">[anthropic.com/claude](https://anthropic.com/claude)</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://www.anthropic.com/claude" target="_blank" rel="noopener noreferrer">[anthropic.com/claude](https://anthropic.com/claude)</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Anthropic-Modell</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Mistral</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://chat.mistral.ai/chat](https://chat.mistral.ai/chat)" target="_blank" rel="noopener noreferrer">chat.mistral.ai/chat</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://chat.mistral.ai/chat" target="_blank" rel="noopener noreferrer">chat.mistral.ai/chat</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Open-Source-Modell</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">DeepSeek</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://deepseek.com](https://deepseek.com)" target="_blank" rel="noopener noreferrer">deepseek.com</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://deepseek.com" target="_blank" rel="noopener noreferrer">deepseek.com</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Gehostet in China</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Qwen</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://qwen.ai](https://qwen.ai)" target="_blank" rel="noopener noreferrer">qwen.ai</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://qwen.ai" target="_blank" rel="noopener noreferrer">qwen.ai</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Gehostet in China</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Microsoft Copilot</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://www.bing.com/chat](https://www.bing.com/chat)" target="_blank" rel="noopener noreferrer">[bing.com/chat](https://bing.com/chat)</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://www.bing.com/chat" target="_blank" rel="noopener noreferrer">[bing.com/chat](https://bing.com/chat)</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">In Bing integriert</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Google AI Studio</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://aistudio.google.com/prompts/new_chat](https://aistudio.google.com/prompts/new_chat)" target="_blank" rel="noopener noreferrer">aistudio.google.com</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://aistudio.google.com" target="_blank" rel="noopener noreferrer">aistudio.google.com</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Google KI-Plattform</td>
               </tr>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-slate-900">Google Labs</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="[https://labs.google/](https://labs.google/)" target="_blank" rel="noopener noreferrer">labs.google</a></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 hover:underline"><a href="https://labs.google/" target="_blank" rel="noopener noreferrer">labs.google</a></td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">Experimentelle Google-Projekte</td>
               </tr>
             </tbody>
