--- a/index.html
+++ b/index.html
@@ -1193,8 +1193,7 @@
                                     </div>
                                 </div>
                                 <div class="mt-4">
-                                    <a href="[https://chat.openai.com/](https://chat.openai.com/)" target="_blank"
-                                        rel="noopener noreferrer"
+                                    <a href="https://chat.openai.com/" target="_blank" rel="noopener noreferrer"
                                         class="inline-block w-full text-center bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition-colors text-sm">
                                         Zur Webseite
                                     </a>
